# Deepseek-OCR

./: .gitignore  .gitignore   Dockerfile  README.md  pyproject.toml  run_model_script.py
.devcontainer/: devcontainer.json
src/deepseek_ocr/: model.py  model_config.py  model_type.py
