[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "deepseek-ocr"
version = "0.1.0"
description = "Project leveraging Deepseek-OCR for advanced Optical Character Recognition tasks."
readme = "README.md"
requires-python = ">=3.10.12"
license = { text = "MIT" }
authors = [
    { name = "Daniel Parres (github: https://github.com/dparres/Deepseek-OCR)" }
]
keywords = ["ocr", "deepseek", "pytorch", "deep-learning", "vision"]


# Runtime Dependencies (Core Project Requirements)
dependencies = [
    # ML/Deep Learning Frameworks (Pinned versions for stability)
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",

    # Model and Attention Libraries
    "transformers==4.46.3",
    "tokenizers==0.20.3",
    "flash-attn==2.7.3",

    # Utilities and Document Processing
    "PyMuPDF==1.26.6",
    "img2pdf==0.6.3",
    "Pillow==11.3.0",
    "numpy==1.26.3",
    "einops==0.8.1",

    # Configuration Utilities
    "easydict==1.13",
    "addict==2.4.0",

    # General Utilities
    "psutil==7.1.3",
    "markupsafe==2.1.5",
]


[project.optional-dependencies]
# Development Dependencies (Formatting, Testing, Type Checking)
dev = [
    "black==25.11.0",  # Code formatting
    "isort==7.0.0",  # Import sorting
    "mypy==1.18.2",   # Static type checking
    "pytest==9.0.1", # Standard testing framework
]

[tool.uv.extra-build-dependencies]
# Dependencies needed to build/compile specific packages like flash-attn
flash-attn = ["setuptools", "packaging", "wheel", "torch==2.6.0"]


[tool.setuptools.packages.find]
# Instructs setuptools to look for packages under the 'src' directory
where = ["src"]


[tool.black]
# Black Formatting Configuration
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
# Isort Configuration
profile = "black"
line_length = 88
known_first_party = "deepseek_ocr"

[tool.uv]
# Extra index URL specifically for PyTorch CUDA 11.8 wheels.
extra-index-url = ["https://download.pytorch.org/whl/cu118"]